<resources>
    <string name="app_name">Cycloville</string>
    <string name="app_tag_line">Transforming Kenya into a Cycling Nation</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">SIGN IN</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>

    <!--All data for ActivityMain.java -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_nav_shopping_cart">Shopping Cart</string>
    <string name="str_nav_wishlist">Wishlist</string>
    <string name="str_nav_history">Order History</string>
    <string name="str_nav_news">News Info</string>
    <string name="str_nav_notifications">Notifications</string>
    <string name="sub_title_nav_others">Others</string>
    <string name="str_nav_instruction">Instruction</string>
    <string name="str_nav_setting">Settings</string>
    <string name="str_nav_rate">Rate</string>
    <string name="str_nav_about">About</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="title_activity_profile">Cycloville</string>

    <string name="title_what_news">What\'s News</string>
    <string name="title_category">Categories</string>

    <!--All data for ActivityCategoryDetails.java -->
    <string name="title_menu_search">Search</string>
    <string name="title_menu_delete">Delete</string>
    <string name="title_menu_sort">Product Sort</string>
    <string name="title_dialog_sort">Product Sort</string>

    <!--All data for ActivitySplash.java -->
    <string name="title_unable_connect">Unable connect to server</string>
    <string name="msg_unable_connect">Server temporary down or under maintenance</string>
    <string name="msg_app_out_date">Application is out of date, please update to get latest version</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="title_info">Information</string>
    <string name="title_no_internet">No Internet Connection</string>

    <!--All data for ActivitySearch.java -->
    <string name="ALL">ALL</string>
    <string name="Category">Category :&#160;</string>
    <string name="hint_input_search">Search input</string>
    <string name="please_fill">Please Fill Search Input</string>

    <!--All data for ActivityOrderHistory.java -->
    <string name="msg_history_empty">Order History is empty</string>
    <string name="title_history_details">Order History Details</string>

    <!--All data for ActivityNotification.java -->
    <string name="msg_notif_empty">Notification is empty</string>
    <string name="default_notification_channel_id">Default</string>


    <string name="invalid_name">invalid name</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_phone">invalid phone</string>
    <string name="invalid_address">invalid address</string>
    <string name="invalid_shipping">invalid shipping</string>
    <string name="invalid_date_ship">invalid date shipping</string>
    <string name="invalid_comment">invalid comment</string>

    <!--All data for ActivityDialogNotification.java -->
    <string name="title_notif_details">Notification Details</string>
    <string name="title_notif">Notification</string>

    <!-- Activity Setting : xml/setting_preference.xml -->
    <string name="app_version">Version</string>
    <string name="developer_email">dev.dream.space@gmail.com</string>
    <string name="copyright">Copyright © 2016 Dream Space. \nAll right reserved</string>

    <string name="pref_group_notif">NOTIFICATIONS</string>
    <string name="pref_group_others">OTHERS</string>
    <string name="pref_title_notif">Push Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_contact_us">Contact Us</string>
    <string name="pref_title_build">Build Version &amp; Serial </string>
    <string name="pref_title_term">Term &amp; Policies</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="grant_permission_storage">Grant storage permission to enable</string>

    <string name="price">KSH 100</string>
    <string name="OK">OK</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="TYPE_SEARCH">SEARCH</string>
    <string name="NO_IMAGE">NO IMAGE</string>
    <string name="DELETE">DELETE</string>
    <string name="OPEN">OPEN</string>
    <string name="SAVE">SAVE</string>
    <string name="NEXT">NEXT</string>
    <string name="SKIP">SKIP</string>
    <string name="APPLY">APPLY</string>
    <string name="nav_header_title">CycloVille Kenya</string>
    <string name="nav_header_subtitle">cycloville.co.ke</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">CycloVille</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">Jacklin Silva</string>
    <string name="user_mail">Jacky@mail.com</string>

</resources>
