<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape_edittext"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/etSecondName"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape_edittext"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape_edittext"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSecondName"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape_edittext"
        android:drawableLeft="@drawable/ic_https_black_24dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_https_black_24dp" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/button_border"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        app:layout_constraintVertical_bias="0.149" />

</android.support.constraint.ConstraintLayout>